--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,18 @@ body{
 #canvas{
     border: 1px brown solid;
     margin-top: 15vh;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 10;
+}
+#bgcanvas{
+    border: 1px rgb(54, 42, 165) solid;
+    margin-top: 15vh;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 11;
 }
 
 #img {
