--- a/css/styles.css
+++ b/css/styles.css
@@ -4,35 +4,49 @@ body{
     background-position: fixed;
     background-size: cover;
     background-color: rgba(185, 232, 255, 1);
+    text-align: center;
 }
 #main{
     width: 75%;
     height: 100vh;
     border-radius: 15px;
     background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15vh;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    
     -webkit-box-shadow: 0px 2px 3px 3px rgba(35,57,84,0.4);
     -moz-box-shadow: 0px 2px 3px 3px rgba(35,57,84,0.4);
     box-shadow: 0px 2px 3px 3px rgba(35,57,84,0.4);
     text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    
+}
+#mainTitle{
+    margin-top: 9vh;
+    font-size: 5vh;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: white;
+    color: #FFFFFF;
+
+text-shadow: 0 1px 0 #CCCCCC, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
 }
 
 #canvas{
     border: 1px brown solid;
     margin-top: 15vh;
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    flex: 1;
+    
     z-index: 125;
 }
 #bgcanvas{
     border: 1px rgb(54, 42, 165) solid;
     margin-top: 15vh;
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    flex: 1;
+    
     z-index: 10;
 }
 
@@ -45,4 +59,7 @@ body{
     border: 1px rgb(99, 42, 165) solid;
     margin-top: 15vh;
     transition: transform 0.2s;
+}
+#myAudio{
+   
 }
